// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSMap Multi Locations 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-has-coordinates"
    id="map-multiple-locations-example"
  >
    <div
      className="slds-map_container"
    >
      <div
        className="slds-map"
      >
        <iframe
          id="map-multiple-locations-example-google-map"
          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc&q=The%20Landmark%20%40%20One%20Market%2C%20San%20Francisco%2C%20CA"
          title="Salesforce Locations In United States"
        />
      </div>
    </div>
    <div
      className="slds-coordinates"
    >
      <div
        className="slds-coordinates__header"
      >
        <h2
          className="slds-coordinates__title"
        >
          Salesforce Locations In United States (9)
        </h2>
      </div>
      <ul
        className="slds-coordinates__list"
      >
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            Worldwide Corporate Headquarters is currently selected
          </span>
          <button
            aria-pressed={true}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                Worldwide Corporate Headquarters
              </span>
              <span>
                The Landmark @ One Market, San Francisco, CA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Atlanta is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Atlanta
              </span>
              <span>
                950 East Paces Ferry Road NE, Atlanta, GA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Bellevue is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Bellevue
              </span>
              <span>
                929 108th Ave NE, Bellevue, WA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Boston is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Boston
              </span>
              <span>
                500 Boylston Street 19th Floor, Boston, MA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Chicago is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Chicago
              </span>
              <span>
                111 West Illinois Street, Chicago, IL
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Herndon is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Herndon
              </span>
              <span>
                2550 Wasser Terrace, Herndon, VA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Hillsboro is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Hillsboro
              </span>
              <span>
                2035 NE Cornelius Pass Road, Hillsboro, OR
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Indy is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Indy
              </span>
              <span>
                111 Monument Circle, Indianapolis, IN
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Irvine is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Irvine
              </span>
              <span>
                300 Spectrum Center Drive, Irvine, CA
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSMap Multi Locations pre-selected 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-has-coordinates"
    id="map-multiple-locations-example"
  >
    <div
      className="slds-map_container"
    >
      <div
        className="slds-map"
      >
        <iframe
          id="map-multiple-locations-example-google-map"
          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc&q=929%20108th%20Ave%20NE%2C%20Bellevue%2C%20WA"
          title="Salesforce Locations In United States"
        />
      </div>
    </div>
    <div
      className="slds-coordinates"
    >
      <div
        className="slds-coordinates__header"
      >
        <h2
          className="slds-coordinates__title"
        >
          Salesforce Locations In United States (9)
        </h2>
      </div>
      <ul
        className="slds-coordinates__list"
      >
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            Worldwide Corporate Headquarters is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                Worldwide Corporate Headquarters
              </span>
              <span>
                The Landmark @ One Market, San Francisco, CA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Atlanta is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Atlanta
              </span>
              <span>
                950 East Paces Ferry Road NE, Atlanta, GA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Bellevue is currently selected
          </span>
          <button
            aria-pressed={true}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Bellevue
              </span>
              <span>
                929 108th Ave NE, Bellevue, WA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Boston is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Boston
              </span>
              <span>
                500 Boylston Street 19th Floor, Boston, MA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Chicago is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Chicago
              </span>
              <span>
                111 West Illinois Street, Chicago, IL
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Herndon is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Herndon
              </span>
              <span>
                2550 Wasser Terrace, Herndon, VA
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Hillsboro is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Hillsboro
              </span>
              <span>
                2035 NE Cornelius Pass Road, Hillsboro, OR
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Indy is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Indy
              </span>
              <span>
                111 Monument Circle, Indianapolis, IN
              </span>
            </span>
          </button>
        </li>
        <li
          className="slds-coordinates__item"
        >
          <span
            aria-live="polite"
            className="slds-assistive-text"
          >
            salesforce.com inc Irvine is currently selected
          </span>
          <button
            aria-pressed={false}
            className="slds-coordinates__item-action slds-button_reset slds-media"
            onClick={[Function]}
            type="button"
          >
            <span
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-standard-account"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="slds-media__body"
            >
              <span
                className="slds-text-link"
              >
                salesforce.com inc Irvine
              </span>
              <span>
                300 Spectrum Center Drive, Irvine, CA
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
